add Base64 encode and decode test